kuma/kuma_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: booking
spec:
  gatewayClassName: kuma
  listeners:
    - name: http
      port: 30080
      protocol: HTTP
